Bug: CSS Overlapping

--- a/css/auth.scss
+++ b/css/auth.scss
@@ -7,18 +7,19 @@ body
     padding: 0;
     box-sizing: border-box;
 
-    main
+    .main
     {
         width: 90vw;
         height: 90vh;
-        margin: 5vh auto;
-        @extend .shadowed, .grid-2;
+        margin: 1vh auto;
+        @extend .grid-2;
 
         div.pre
         {
             background-image: url("../img/health.jpg");
             background-position: center center;
             background-size: cover;
+            height: 100%;
             img
             {
                 width: 20%;
@@ -57,6 +58,8 @@ body
         {
             padding: 5%;
             @extend .flex-column, .y-start, .x-start;
+            height: 100%;
+            border-radius: 10px;
 
             h1
             {
@@ -75,12 +78,19 @@ body
                 width: 100%;
                 padding: 1%;
 
+                label
+                {
+                    color: lighten($primary-color, 15);
+                    margin-left: 10px;
+                    margin-bottom: 10px;
+                }
+
 
                 input, select
                 {
                     outline: 0;
-                    height: calc(100% / 10);
-                    margin: calc(100% / 150);
+                    height: 60px;
+                    margin: 10px;
                     width: 100%;
                     border-color: transparent;
                     border-radius: 10px;
@@ -99,21 +109,21 @@ body
                 }
                 button
                 {
-                    height: calc(100% / 10);
-                    margin: calc(100% / 150);
+                    @extend .btn-primary;
                     width: 100%;
                 }
             }
         }
     }
 
-    section
+    .section
     {
-        width: 90vw;
-        height: 90vh;
-        margin: 5vh auto;
+        width: 80vw;
+        height: 80vh;
+        margin: 14vh auto;
         border-radius: 10px;
-        @extend .shadowed, .grid-2;
+        @extend  .grid-2;
+
 
         div.pre
         {
@@ -122,9 +132,10 @@ body
 
             background-position: center center;
             background-size: cover;
+            height: 60vh;
             img
             {
-                width: 20%;
+                width: 90%;
                 margin: 1%;
                 // z-index: 9;
             }
@@ -163,6 +174,7 @@ body
             border-radius: 10px;
             padding: 5%;
             @extend .flex-column, .x-start;
+            height: 100%;
 
             h1
             {
@@ -181,12 +193,20 @@ body
                 width: 100%;
                 padding: 1%;
 
+                label
+                {
+                    color: lighten($primary-color, 15);
+                    margin-left: 10px;
+                    margin-bottom: 10px;
+                }
+
 
                 input, select
                 {
                     outline: 0;
-                    height: calc(100% / 10);
-                    margin: calc(100% / 150);
+                    height: 50px;
+                    margin-left: 5px;
+                    margin-bottom: 30px;
                     width: 100%;
                     border-color: transparent;
                     border-radius: 10px;
